cambio de color en boton de plan basico

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               Crea perfiles personalizados para cada miembro de la familia
             </li>
           </ul>
-          <button class="tarjeta-boton btn-primario">Ver</button>
+          <button class="tarjeta-boton">Ver</button>
         </div>
         <div class="tarjeta flex-col">
           <h2 class="tarjeta-titulo popular" data="Recomendado">Premium</h2>
@@ -103,7 +103,7 @@
               Descarga contenido para verlo sin conexión en dispositivos móviles
             </li>
           </ul>
-          <button class="tarjeta-boton btn-primario">Ver</button>
+          <button class="tarjeta-boton">Ver</button>
         </div>
       </div>
     </main>
